--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -61,11 +61,13 @@
     "注意：违反命名规则**不一定**报错，但很可能会导致 Python 程序出现随机的异常行为。\n",
     "> 致正在自己阅读这份文档的同学们：\n",
     ">\n",
-    "> 如果你使用 VS Code 打开此 Notebook 文件，你可能会发现上面的 `123abc` 被划上了红色波浪下划线。\n",
+    "> 如果你使用 VS Code 打开此 Notebook 文件，你可能会发现上面的 `123abc` 的一部分被划上了红色波浪下划线。\n",
     ">\n",
-    "> 波浪下划线表示由 VS Code 自带的静态语法检查功能检查出的问题。红色下划线代表**错误 (Error)**，其几乎肯定会使程序停止运行；黄色下划线代表**警告 (Warning)**，其有几率使程序出错或产生不正常的行为。\n",
+    "> 波浪下划线标示了由 VS Code 自带的静态语法检查功能检查出的问题。红色下划线代表**错误 (Error)**，其几乎肯定会使程序停止运行；黄色下划线代表**警告 (Warning)**，其有几率使程序结果出错或产生异常行为。\n",
     ">\n",
-    "> VS Code 检查出的问题也会统一显示在窗口下半部分的 `PROBLEMS（问题）` 选项卡中（如果窗口没有下半部分，可按快捷键 `Ctrl + J` 调出）。要想让程序正常运行，最好先保证其没有被检查出任何问题。"
+    "> VS Code 检查出的问题也会统一显示在窗口下半部分的 `PROBLEMS（问题）` 选项卡中（如果窗口没有下半部分，可按快捷键 `Ctrl + J` 调出）。\n",
+    ">\n",
+    ">虽然在某些情况下 VS Code 会错误地认为正常代码中存在问题，但是要想让程序正常运行，最好先保证其没有被检查出任何问题。"
    ]
   },
   {
@@ -209,12 +211,12 @@
     "\n",
     "age = 20                 # 给 age 赋值 20\n",
     "\n",
-    "# 简单加法：输出字面值 30\n",
+    "# 简单加法：输出字面值结果 30\n",
     "# age 没有被重新赋值，其值仍为 20 不变\n",
     "print(age + 10)\n",
     "\n",
-    "# Tips: 在 Notebook 中，最后一行如果是直接的变量或数据\n",
-    "# 执行后将在最末尾直接输出其值\n",
+    "# Tips: 在 Notebook 中，如果代码单元格的最后一行是直接的变量或数据，\n",
+    "# 执行此单元格后将在执行结果的最末尾直接输出其值\n",
     "age"
    ]
   },
@@ -561,8 +563,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "注意：上面对 `a` 和 `b` 的赋值流程，其结果是一样的。\n",
-    "就像数学中嵌套两个函数形成复合函数 $f(g(x))$ 一样，Python 中允许类似“嵌套语句”的用法。上面对 `b` 的赋值即是将 `input()` 嵌套进了 `int()` 之中。"
+    "注意：上面 `a` 和 `b` 的赋值流程虽然看起来不同，但结果是一样的。\n",
+    "\n",
+    "就像数学中嵌套两个函数形成复合函数 $f(g(x))$ 一样，Python 中允许类似“嵌套语句”的用法。上面对 `b` 的赋值语句即是将 `input()` 嵌套进了 `int()` 之中。"
    ]
   },
   {
@@ -602,12 +605,13 @@
     "\n",
     "print(\"a == b:\", a == b)\n",
     "\n",
-    "print(\"a + b:\", a + b <= a) # 比较运算的优先级低于算术运算\n",
+    "print(\"a + b:\", a + b <= a) # 比较运算符的优先级低于一般的算术运算符\n",
     "\n",
     "print(\"a != 1:\", a != 1)\n",
     "\n",
     "today = 4 # 今天是星期几？\n",
     "is_thursday = (today == 4) # 今天是星期四吗？\n",
+    "print(\"is_thursday:\",is_thursday)\n",
     "\n",
     "m = 0.1 + 0.2\n",
     "print(\"m > 0.3:\", m > 0.3) # 还记得为什么吗？"
@@ -650,12 +654,12 @@
    "source": [
     "#### 布尔运算符的短路求值\n",
     "\n",
-    "- 在 `A and B and C and D and ...` 这样的表达式中，如果 `A` 为 `False`，则无论 `B`, `C`, `D` ... 的值如何，整个表达式必然为 `False`，因此后续的表达式不再需要计算。\n",
-    "- 类似的，在 `A or B or C or D or ...` 中，如果 `A` 为 `True`，则整个表达式必然为 `True` \n",
+    "- 在 `A and B and C and D and ...` 这样的表达式中，如果 `A` 为 `False`，则无论 `B`, `C`, `D` ... 的值如何，整个表达式必然为 `False`，因此后续的表达式就没有必要计算下去了。\n",
+    "- 类似的，在 `A or B or C or D or ...` 中，如果 `A` 为 `True`，则整个表达式必然为 `True` 。 \n",
     "\n",
     "Python 的布尔运算符就能够这样“偷懒”。\n",
     "\n",
-    "布尔运算符 and 和 or 是**短路运算符（short-circuit operators）**：其参数从左至右求值，一旦可以确定结果，求值就会停止。"
+    "布尔运算符 `and` 和 `or` 是**短路运算符（short-circuit operators）**：其参数从左至右求值，一旦可以确定结果，就不再继续求值。"
    ]
   },
   {
@@ -703,12 +707,14 @@
    "source": [
     "# 示例 2.5.4 - 课件 p55\n",
     "\n",
+    "# 假设有一基金投资系统：\n",
+    "\n",
     "is_logged_in = False    # 你登录了吗？\n",
     "is_admin = True         # 你是管理员吗？\n",
     "is_approved = False     # 你通过了审核吗？\n",
     "account_balance = 2002  # 你的账户余额是多少？\n",
     "\n",
-    "# 当用户的余额足够承担风险（超过基准线 1000 两倍），并且通过了审核，登陆过后可进行购买操作\n",
+    "# 当用户的余额足够承担风险（超过基准线 1000 的两倍），并且通过了审核，登陆过后可进行购买操作\n",
     "# 但是管理员可以直接购买\n",
     "\n",
     "has_permission = (is_logged_in and is_approved and account_balance / 2 >= 1000) or is_admin"
