--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -348,7 +348,7 @@
     "* `input()` 用于从用户输入获取数据。\n",
     "* `print(x)` 用于在屏幕上打印变量 `x`（结尾附加一个换行）。\n",
     "  * `print(x, end=\"abc\")` 可以把结尾的换行符替换为 `abc`。\n",
-    "  * 相似的，`print(x, end=\"\")` 可去掉默认附加的换行。。\n",
+    "  * 相似地，`print(x, end=\"\")` 可去掉默认附加的换行。\n",
     "\n",
     "* 使用 `input(x)` 可在接收输入时先输出变量 `x`，以便提示用户输入。\n",
     "* `input()` 将一切输入作为字符串 (`str`) 处理。\n",
@@ -509,7 +509,7 @@
    "source": [
     "#### 强制类型转换\n",
     "\n",
-    "我们可以通过 `类型名(x)` 强制转换数据 `x` 为 `类型名` 类型。注意：此操作相当于运算符，并不是修改值，因此被操作的 `x` 是不会受影响的。"
+    "对于某一类型 `typename`，我们可以通过 `typename(x)` 强制转换数据 `x` 为 `typename` 类型。注意：此操作相当于运算符，并不是修改值，因此被操作的 `x` 是不会受影响的。"
    ]
   },
   {
@@ -714,8 +714,8 @@
     "is_approved = False     # 你通过了审核吗？\n",
     "account_balance = 2002  # 你的账户余额是多少？\n",
     "\n",
-    "# 当用户的余额足够承担风险（超过基准线 1000 的两倍），并且通过了审核，登陆过后可进行购买操作\n",
-    "# 但是管理员可以直接购买\n",
+    "# 当用户的余额足够承担风险（超过基准线 1000 的两倍）、通过了审核且已经登录，方可进行购买操作\n",
+    "# 但是管理员可以直接购买，不受上面条件的限制\n",
     "\n",
     "has_permission = (is_logged_in and is_approved and account_balance / 2 >= 1000) or is_admin"
    ]
