--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "*100% 纯人工敲键盘制作！不含任何 GPT 成分！*\n",
     "\n",
-    "主要写作人：徐启翰"
+    "Made with ♥ by SI100B Staff.\n",
+    "\n",
+    "Main writer: Qihan Xu"
    ]
   },
   {
@@ -215,8 +217,8 @@
     "# age 没有被重新赋值，其值仍为 20 不变\n",
     "print(age + 10)\n",
     "\n",
-    "# Tips: 在 Notebook 中，如果代码单元格的最后一行是直接的变量或数据，\n",
-    "# 执行此单元格后将在执行结果的最末尾直接输出其值\n",
+    "# Tips: 如果代码单元格的最后一行是直接的变量或数据，\n",
+    "# 执行此单元格后将在执行结果的最末尾直接输出变量或数据的值\n",
     "age"
    ]
   },
@@ -255,8 +257,8 @@
     "浮点数在计算机中以二进制存储：\n",
     "* 0.1 实际存储的值近似于十进制的 0.1000000000000000055511...\n",
     "* 0.2 实际存储的值近似于十进制的 0.2000000000000000111022...\n",
-    "* 两个值相加，得到的结果近似于十进制下 0.3000000000000000444...\n",
-    "  * 注：浮点数是以二进制形式相加，直接在十进制下相加的话并不和上面的结果相等。\n",
+    "* 两个值相加，得到的结果近似于十进制的 0.3000000000000000444...\n",
+    "  * 注：浮点数是以二进制形式相加，直接以近似十进制相加的话并不和上面的结果相等。\n",
     "\n",
     "而 0.3 实际存储的值接近于 0.2999999999999999889... 因此会出现上述的 \"0.1 + 0.2 ≠ 0.3\".\n",
     "\n",
@@ -355,7 +357,7 @@
     "* 使用 `print(x, y, ...)` 将在一行内依序输出 `x`, `y`, ...（以空格间隔）\n",
     "  * 例如 `print(\"非常好SI\", 100, \"P\")` 将输出 `非常好SI 100 P`.\n",
     "\n",
-    "> 在 Notebook 中，`input()` 调起的输入框会出现在页面上方，如下图。\n",
+    "> 在 Notebook 中，`input()` 调起的输入框会出现在窗口顶部，如下图。\n",
     ">\n",
     "><img src=\"images/0-1.png\" width=\"50%\">"
    ]
@@ -563,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "注意：上面 `a` 和 `b` 的赋值流程虽然看起来不同，但结果是一样的。\n",
+    "注：上面 `a` 和 `b` 的赋值流程虽然看起来不同，但结果是一样的。\n",
     "\n",
     "就像数学中嵌套两个函数形成复合函数 $f(g(x))$ 一样，Python 中允许类似“嵌套语句”的用法。上面对 `b` 的赋值语句即是将 `input()` 嵌套进了 `int()` 之中。"
    ]
