--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "*100% 纯人工敲键盘制作！不含任何 GPT 成分！*\n",
     "\n",
-    "Made with ♥ by SI100B Staff.\n",
+    "Made with ♥ by SI100+ Staff.\n",
     "\n",
     "Main writer: Qihan Xu"
    ]
