changed notebook header

--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -6,11 +6,9 @@
    "source": [
     "# Python Lecture 2：**变量、运算符和表达式**\n",
     "\n",
-    "*100% 纯人工敲键盘制作！不含任何 GPT 成分！*\n",
+    "*100% 真人手敲制作！不含任何 GPT 成分！*\n",
     "\n",
-    "Made with ♥ by SI100+ Staff.\n",
-    "\n",
-    "Main writer: Qihan Xu"
+    "Made with ♥ by SI100+ Staff."
    ]
   },
   {
