add takeaway messages (last page)

--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "*100% 真人手敲制作！不含任何 GPT 成分！*\n",
     "\n",
-    "Made with ♥ by SI100+ Staff."
+    "Made with ♥ by SI100+ (2024) Staff."
    ]
   },
   {
