add short circuit example

--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -683,6 +683,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 示例 2.5.4 - 课件 p54\n",
+    "\n",
+    "# 短路运算会完全跳过不必要的计算\n",
+    "\n",
+    "# 0 不能做除数，1 / 0 == 1 会抛出异常\n",
+    "# 最后的 print 语句不会被执行\n",
+    "foo = True or (1 / 0 == 1) or print(\"123\")\n",
+    "\n",
+    "bar = False and (3 / 0 == 1) and print(foo)\n",
+    "\n",
+    "print(foo, bar)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -705,7 +724,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 示例 2.5.4 - 课件 p55\n",
+    "# 示例 2.5.5 - 课件 p55\n",
     "\n",
     "# 假设有一基金投资系统：\n",
     "\n",
