fix issue where file is not closed after read

--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -438,11 +438,15 @@
     "print(\"文件已写入。\")\n",
     "\n",
     "\n",
-    "f = open(filename, \"r\")  # 以读取模式打开文件\n",
-    "content = f.read()       # 读取文件全部内容\n",
+    "f = open(filename, \"r\")   # 以读取模式打开文件\n",
+    "\n",
+    "content = f.read()        # 读取文件全部内容\n",
+    "\n",
+    "f.close()                 # 关闭文件\n",
+    "\n",
     "print(\"文件内容：\")\n",
     "print(\"===========\")\n",
-    "print(content)           # 输出文件内容\n",
+    "print(content)            # 输出文件内容\n",
     "print(\"===========\")"
    ]
   },
