add an output in last cell

--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -740,7 +740,8 @@
     "# 当用户的余额足够承担风险（超过基准线 1000 的两倍）、通过了审核且已经登录，方可进行购买操作\n",
     "# 但是管理员可以直接购买，不受上面条件的限制\n",
     "\n",
-    "has_permission = (is_logged_in and is_approved and account_balance / 2 >= 1000) or is_admin"
+    "has_permission = (is_logged_in and is_approved and account_balance / 2 >= 1000) or is_admin\n",
+    "has_permission"
    ]
   }
  ],
