--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.ipynb
@@ -515,7 +515,7 @@
     "\n",
     "对于某一类型 `typename`，我们可以通过 `typename(x)` 强制转换数据 `x` 为 `typename` 类型。注意：此操作相当于运算符，并不是修改值，因此被操作的 `x` 是不会受影响的。\n",
     "\n",
-    "> 备注：类型转换 `typename(x)` 的本质是“由 `x` 创建一个新的 `typename` 类型的变量”，因此并非所有类型都能相互转换。而“创建指定类型的变量”则涉及到“类”等高级的编程概念，目前还不需要你详细理解。"
+    "> 备注：类型转换 `typename(x)` 的本质是“用 `x` 创建一个新的 `typename` 类型的变量”，因此并非所有类型都能相互转换。而“创建指定类型的变量”则涉及到“类”等高级的编程概念，目前还不需要你详细理解。"
    ]
   },
   {
