lec3: backup version 1

--- a/Lecture_PY_03_Function/Lecture_PY_03_Function.ipynb
+++ b/Lecture_PY_03_Function/Lecture_PY_03_Function.ipynb
@@ -282,6 +282,275 @@
     "\n",
     "print(ChuanShanJia())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "my_print() missing 1 required positional argument: 'end'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(var, end\u001b[38;5;241m=\u001b[39mend)\n\u001b[1;32m      4\u001b[0m my_print(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m my_print(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWorld\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: my_print() missing 1 required positional argument: 'end'"
+     ]
+    }
+   ],
+   "source": [
+    "def my_print(var, end):\n",
+    "    print(var, end=end)\n",
+    "\n",
+    "my_print(\"Hello\", \"\")\n",
+    "my_print(\"World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x, y, z = 1 2 3\n",
+      "x, y, z = 1 3 2\n",
+      "x, y, z = 2 1 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pos_func(x, y, z): # 位置参数\n",
+    "    print(\"x, y, z =\", x, y, z) # 按顺序输出 x, y, z\n",
+    "\n",
+    "pos_func(1, 2, 3)\n",
+    "pos_func(1, 3, 2)\n",
+    "pos_func(2, 1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x, y, z = 1 2 3\n",
+      "x, y, z = 1 2 3\n",
+      "x, y, z = 1 3 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def key_func(x, y, z): # 关键字参数\n",
+    "    print(\"x, y, z =\", x, y, z)\n",
+    "\n",
+    "key_func(x=1, y=2, z=3) # 指定参数名传入参数\n",
+    "key_func(z=3, y=2, x=1) # 顺序不重要\n",
+    "key_func(1, z=2, y=3) # 位置参数和关键字参数可以混合使用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x, y, z = 1 2 3\n",
+      "x, y, z = 1 2 4\n",
+      "x, y, z = 1 4 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def default_func(x, y, z=3): # 默认参数\n",
+    "    print(\"x, y, z =\", x, y, z)\n",
+    "\n",
+    "default_func(1, 2) # 默认参数 z = 3，可以省略\n",
+    "default_func(1, 2, 4) # 传入参数 z = 4，覆盖默认参数 z = 3\n",
+    "default_func(x=1, z=2, y=4) # 默认参数和关键字参数也可以混合使用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (4058658961.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[37], line 1\u001b[0;36m\u001b[0m\n",
+      "\u001b[0;31m    key_func(1, z=3, 2)\u001b[0m\n",
+      "\u001b[0m                      ^\u001b[0m\n",
+      "\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "key_func(1, z=3, 2) # 这是不允许的"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "0\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = 0 # 全局变量，作用范围为全局\n",
+    "\n",
+    "def scope1():\n",
+    "\t# ans = 1\n",
+    "\tprint(ans) # 3. 虽然是最内层函数，但是可以访问到全局变量 ans\n",
+    "\n",
+    "def scope2():\n",
+    "\tans = 2\n",
+    "\tprint(ans) # 2. 前面已经定义局部变量 ans, 优先访问局部变量 ans\n",
+    "\tscope1()\n",
+    "\tprint(ans) # 4. 优先访问局部变量 ans\n",
+    "\n",
+    "print(ans) # 1. 输出全局变量 ans\n",
+    "scope2()\n",
+    "print(ans) # 5. 全局变量的 ans 并没有被修改"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'ans' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[57], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m \t\u001b[38;5;28mprint\u001b[39m(ans)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(ans) \u001b[38;5;66;03m# 1. 输出全局变量 ans\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m scope2()\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(ans)\n",
+      "Cell \u001b[0;32mIn[57], line 8\u001b[0m, in \u001b[0;36mscope2\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mscope2\u001b[39m():\n\u001b[0;32m----> 8\u001b[0m \t\u001b[38;5;28mprint\u001b[39m(ans) \u001b[38;5;66;03m# 接下来的局部变量 ans 还没有被赋值，全局变量却有重名，所以会报错\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \tans \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;66;03m# 本函数的局部变量 ans\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \tscope1()\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'ans' where it is not associated with a value"
+     ]
+    }
+   ],
+   "source": [
+    "ans = 0 # 全局变量，作用范围为全局\n",
+    "\n",
+    "def scope1():\n",
+    "\t# ans = 1\n",
+    "\tprint(ans)\n",
+    "\n",
+    "def scope2():\n",
+    "\tprint(ans) # 接下来的局部变量 ans 还没有被赋值，全局变量却有重名，所以会报错\n",
+    "\tans = 2 # 本函数的局部变量 ans\n",
+    "\tscope1()\n",
+    "\tprint(ans)\n",
+    "\n",
+    "print(ans) # 1. 输出全局变量 ans\n",
+    "scope2()\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = 0 # 全局变量，作用范围为全局\n",
+    "\n",
+    "def scope1():\n",
+    "\t# ans = 1\n",
+    "\tprint(ans)\n",
+    "\n",
+    "def scope2():\n",
+    "\tprint(ans)\n",
+    "\t# ans = 2 # 如果不定义，就会自动访问全局变量 ans，而没有报错\n",
+    "\tscope1()\n",
+    "\tprint(ans)\n",
+    "\n",
+    "print(ans) # 1. 输出全局变量 ans\n",
+    "scope2()\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of circle:  78.53981633974483\n",
+      "Circumference of circle:  31.41592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math # 导入 math 库，可以使用 math.pi\n",
+    "\n",
+    "def area_of_circle(radius=1): # 默认半径为 1\n",
+    "    return math.pi * radius ** 2\n",
+    "\n",
+    "def circumference_of_circle(radius=1): # 默认半径为 1\n",
+    "    return 2 * math.pi * radius\n",
+    "\n",
+    "r = int(input(\"r = \"))\n",
+    "area = area_of_circle(r) # 通过位置参数传入半径\n",
+    "circumference = circumference_of_circle(radius=r) # 通过关键字参数传入半径\n",
+    "\n",
+    "print(\"Area of circle: \", area)\n",
+    "print(\"Circumference of circle: \", circumference)"
+   ]
   }
  ],
  "metadata": {
