lec3: try lihua as example

--- a/Lecture_PY_03_Function/Lecture_PY_03_Function.ipynb
+++ b/Lecture_PY_03_Function/Lecture_PY_03_Function.ipynb
@@ -32,6 +32,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print\n",
+    "print(123)\n",
+    "# 尝试在 VSCode 中缓慢打出\n",
+    "# print(\"Hello\", end=\"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
