--- a/Lecture_PY_03_Function/Lecture_PY_03_Function.ipynb
+++ b/Lecture_PY_03_Function/Lecture_PY_03_Function.ipynb
@@ -422,6 +422,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "外面的人 高考英语卷中的李华\n",
+      "上科大 上海科技大学的李华\n",
+      "南科大 高考英语卷中的李华\n",
+      "外面的人 高考英语卷中的李华\n"
+     ]
+    }
+   ],
+   "source": [
+    "li_hua = \"高考英语卷中的李华\"\n",
+    "# 我们都知道，李华是一个很有名的人物，他在高考英语卷中出现了很多次\n",
+    "# 我们看看不同人提到李华时会想到什么\n",
+    "\n",
+    "def ShanghaiTech(): # 假设上海科技大学里来了一个李华（假设上科大人尽皆知）\n",
+    "    li_hua = \"上海科技大学的李华\"\n",
+    "    print(\"上科大\", li_hua) # 上科大的人第一反应肯定是上科大的李华\n",
+    "\n",
+    "def SUSTech(): # 假设隔壁大学没有李华\n",
+    "    print(\"隔壁大学\", li_hua) # 隔壁大学人的第一反应肯定是高考英语卷中的李华\n",
+    "\n",
+    "# 外面的人（最外层）没有听说过别的李华\n",
+    "print(\"外面的人\", li_hua) # 自然会认为这个李华是高考英语卷中的李华\n",
+    "ShanghaiTech() # 调用 ShanghaiTech 函数\n",
+    "SUSTech() # 调用 SUSTech 函数\n",
+    "print(\"外面的人\", li_hua) # ShanghaiTech 的李华不会影响外面的人心中的李华"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [
@@ -581,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
