lec3: notebook finished

--- a/Lecture_PY_03_Function/Lecture_PY_03_Function.ipynb
+++ b/Lecture_PY_03_Function/Lecture_PY_03_Function.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Lecture 3：**函数**\n",
+    "\n",
+    "*100% 真人手敲制作！不含任何 GPT 成分！*\n",
+    "\n",
+    "Made with ♥ by SI100+ (2024) Staff."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 00. 在开始之前\n",
+    "\n",
+    "### 查询已有函数用法 - `help()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 尝试打开终端运行 `help(print)` 看看是什么样的？\n",
+    "- 尝试在下面的代码块中，将 `print` 换成 `input`, `\"SI100P\"` 等，运行，看看会发生什么。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -31,15 +59,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 查询已有函数用法 - 代码提示\n",
+    "\n",
+    "- 尝试将鼠标悬浮在下面的 `print` 上，看看会发生什么？两个有什么区别？\n",
+    "- 尝试悬浮在别的代码上，看看会发生什么？"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "print\n",
-    "print(123)\n",
-    "# 尝试在 VSCode 中缓慢打出\n",
+    "print(123)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 尝试在下方代码块中缓慢打出 `print(\"Hello\", end=\"!\")`，看看代码提示有什么变化？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pass\n",
     "# print(\"Hello\", end=\"!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 查询已有函数用法 - `?`\n",
+    "\n",
+    "- 尝试替换 `print`，看看会发生什么"
    ]
   },
   {
@@ -66,8 +128,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 内置函数初探\n",
+    "\n",
+    "- `len(str)`: `str` 的长度\n",
+    "- `max(a, b)`: `a` 与 `b` 中最大值\n",
+    "- `min(a, b)`: `a` 与 `b` 中最小值\n",
+    "- `abs(x)`: `x` 的绝对值\n",
+    "- `str.upper()` 全大写的 `str`\n",
+    "- `str.lower()` 全小写的 `str`\n",
+    "- `str.capitalize()` 首字母大写的 `str`\n",
+    "- `str.replace(str1, str2)` 将 `str` 中的所有 `str1` 替换成 `str2`\n",
+    "- `str.replace(str1, str2, N)` 同上，但最多只替换 `N` 次\n",
+    "- `str.isupper()` `str` 是否全是大写字母（布尔类型）\n",
+    "- `str.isdigit()` `str` 是否全是数字（布尔类型）\n",
+    "- `str.isalpha()` `str` 是否全是字母（布尔类型）\n",
+    "- `str.isalnum()` `str` 是否全是数字或字母（布尔类型）"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "-1\n",
+      "1\n",
+      "ABC\n",
+      "abc\n",
+      "Hello from si100b\n",
+      "hello!from!si100b\n",
+      "hello!from si100b\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(\"123\"))\n",
+    "print(max(1, 2))\n",
+    "print(min(-1, 2))\n",
+    "print(abs(-1))\n",
+    "print(\"abc\".upper())\n",
+    "print(\"ABC\".lower())\n",
+    "print(\"hello from si100b\".capitalize())\n",
+    "print(\"hello from si100b\".replace(\" \", \"!\"))\n",
+    "print(\"hello from si100b\".replace(\" \", \"!\", 1))\n",
+    "print(\"HELLO\".isupper())\n",
+    "print(\"123\".isdigit())\n",
+    "print(\"HeLlO\".isalpha())\n",
+    "print(\"39\".isdigit())\n",
+    "print(\"SI100b\".isalnum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 尝试运行下面两个代码块，为什么下面的代码块会报错？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +226,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid decimal literal\n",
       "<>:1: SyntaxWarning: invalid decimal literal\n",
-      "/tmp/ipykernel_4039/4142401625.py:1: SyntaxWarning: invalid decimal literal\n",
+      "/tmp/ipykernel_121557/4142401625.py:1: SyntaxWarning: invalid decimal literal\n",
       "  print(123.isdigit())\n"
      ]
     },
@@ -102,15 +235,58 @@
      "evalue": "invalid syntax. Perhaps you forgot a comma? (4142401625.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 1\u001b[0;36m\u001b[0m\n",
-      "\u001b[0;31m    print(123.isdigit())\u001b[0m\n",
-      "\u001b[0m          ^\u001b[0m\n",
-      "\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[10], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(123.isdigit())\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
      ]
     }
    ],
    "source": [
     "print(123.isdigit())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 尝试运行下面的代码\n",
+    "    - 为什么是 `True`? 和你的想法有区别吗? 你能从 `help(\"ABC123\".isupper)` 中找到原因吗?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "Help on built-in function isupper:\n",
+      "\n",
+      "isupper() method of builtins.str instance\n",
+      "    Return True if the string is an uppercase string, False otherwise.\n",
+      "    \n",
+      "    A string is uppercase if all cased characters in the string are uppercase and\n",
+      "    there is at least one cased character in the string.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"ABC123%^&\".isupper())\n",
+    "\n",
+    "help(\"ABC123%^&\".isupper)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 01.函数与方法\n",
+    "\n",
+    "见 Slides\n",
+    "\n",
+    "### 简单地导入库"
    ]
   },
   {
@@ -143,12 +319,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$f(x) = x^2 + 2x + 1$"
+    "## 02. 定义函数、调用函数、返回值"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面是对 $f(x) = x^2 + 2x + 1$ 的简单实现和调用，我们先尝试自己理解"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -157,16 +340,25 @@
        "9"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def f(x):\n",
+    "def f(x): # 定义函数，并不会执行\n",
     "\treturn x ** 2 + 2 * x + 1\n",
     "\n",
-    "f(2)"
+    "# f(2) # 取消注释这行来执行"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 定义函数\n",
+    "\n",
+    "- 观察下列代码，看看结果是否符合你的预期"
    ]
   },
   {
@@ -196,6 +388,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 为什么下面的代码块会报错？"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -217,6 +416,13 @@
     "\n",
     "def g(chara):\n",
     "\tprint(\"我去,\", chara, \"!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 再次运行？你是否明白了函数的定义+调用的顺序？"
    ]
   },
   {
@@ -242,15 +448,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 用 `return` 返回计算的结果\n",
+    "\n",
+    "- 观察下列输出，是否能体会返回的意义？"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None 4 4\n"
+      "None 4 4\n",
+      "13\n"
      ]
     }
    ],
@@ -265,12 +481,20 @@
     "def calc3(x):\n",
     "\treturn x ** 2 # return 也可以直接返回\n",
     "\n",
-    "print(calc1(2), calc2(2), calc3(2))"
+    "print(calc1(2), calc2(2), calc3(2))\n",
+    "print(calc2(2) + calc3(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `return` 下面一行为什么是暗色的？他会被执行吗？"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -293,6 +517,17 @@
     "\tprint(\"啊哈哈哈哈哈哈哈哈\") # 笑不出来\n",
     "\n",
     "print(ChuanShanJia())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 03. 参数\n",
+    "\n",
+    "### 参数的类型\n",
+    "\n",
+    "- 尝试运行下列代码，为什么会报错（查看报错信息）？"
    ]
   },
   {
@@ -325,6 +560,13 @@
     "\n",
     "my_print(\"Hello\", \"\")\n",
     "my_print(\"World\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 运行下列代码块，体会不同参数的用法和不同参数结合的用法。"
    ]
   },
   {
@@ -421,6 +663,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 04.作用域\n",
+    "\n",
+    "- 观察下列代码，理解为什么输出 `which_li_hua` 的值各不相同"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -453,6 +704,13 @@
     "ShanghaiTech() # 调用 ShanghaiTech 函数\n",
     "SUSTech() # 调用 SUSTech 函数\n",
     "print(\"外面的人\", which_li_hua) # ShanghaiTech 的李华不会影响外面的人心中的李华"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- （可选）结合下列代码，观察为什么报错？"
    ]
   },
   {
@@ -531,6 +789,13 @@
     "print(ans) # 1. 输出全局变量 ans\n",
     "scope2()\n",
     "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 05. 实践——圆的周长面积计算器！"
    ]
   },
   {
