test: images not found

--- a/Lecture_04_Control_Flow/Lecture_04.ipynb
+++ b/Lecture_04_Control_Flow/Lecture_04.ipynb
@@ -4,7 +4,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `While` 循环"
+    "# Python Lecture 4：**控制流**\n",
+    "\n",
+    "*100% 真人手敲制作！不含任何 GPT 成分！*\n",
+    "\n",
+    "Made with ♥  by SI100+ (2024) Staff."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 00. 控制流是什么"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 01. 条件语句"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `if`, `if-else`, `if-elif-else`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is a positive number\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "if x > 0:\n",
+    "    print(\"x is a positive number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is not a positive number\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = -10\n",
+    "if x > 0:\n",
+    "    print(\"x is a positive number\")\n",
+    "else:\n",
+    "    print(\"x is not a positive number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "if x > 0:\n",
+    "    print(\"x is a positive number\")\n",
+    "elif x < 0:\n",
+    "    print(\"x is a negative number\")\n",
+    "else:\n",
+    "    print(\"x is zero\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x < 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "if x > 1:\n",
+    "    print(\"x > 1\")\n",
+    "elif x < 1: # 中间的条件已经满足，后面的条件不会再判断\n",
+    "    print(\"x < 1\") \n",
+    "elif x == 0:\n",
+    "    print(\"x is zero\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 大家可以更改 `x` 的值，看看是否符合预期"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Huge\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 50\n",
+    "if x < 2:\n",
+    "    print('Small')\n",
+    "else:\n",
+    "    if x < 10:\n",
+    "        print('Medium')\n",
+    "    elif x < 20:\n",
+    "        print('Big')\n",
+    "    elif x < 100:\n",
+    "        print('Huge')\n",
+    "    else:\n",
+    "        print('Ginormous')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `While` 循环"
    ]
   },
   {
@@ -276,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +437,8 @@
      "output_type": "stream",
      "text": [
       "num = 2\n",
-      "1 5 10 num = 10\n"
+      "1 5 10 \n",
+      "num = 10\n"
      ]
     }
    ],
