--- a/Lecture_05_How_To_Use_Python/PY进阶_Raw.ipynb
+++ b/Lecture_05_How_To_Use_Python/PY进阶_Raw.ipynb
@@ -402,7 +402,7 @@
    "metadata": {},
    "source": [
     "### OS 库之文件进程管理\n",
-    "**TODO:** Google 了一下发现运行终端指令已经不用 `os.system` 了（现在多用 `subprocess` 模块），而且进程管理还得看是什么操作系统，我的建议是把进程管理这块删了，然后把相对绝对路径挪到上一页的文件路径管理去讲（毕竟文件路径管理用到相对路径了）"
+    "此处不作详细演示，请见 Slides"
    ]
   },
   {
