maze: added credits

--- a/Exercises/maze-game/README.ipynb
+++ b/Exercises/maze-game/README.ipynb
@@ -152,7 +152,25 @@
    "metadata": {},
    "source": [
     "## Credits:\n",
-    "\n"
+    "\n",
+    "关卡设计与代码实现：\n",
+    "\n",
+    "- [AstatineAi (Hengyu Ai)](https://github.com/AstatineAi)\n",
+    "- [ZAMBAR (Zebang He)](https://github.com/HeZeBang)\n",
+    "\n",
+    "美术素材：\n",
+    "\n",
+    "- [Sokoban Free Tileset - DANI MACCARI](https://dani-maccari.itch.io/sokoban-tileset)\n",
+    "\n",
+    "- [Small 8-direction Characters - AxulArt](https://axulart.itch.io/small-8-direction-characters)\n",
+    "\n",
+    "字体：\n",
+    "\n",
+    "- [Caskaydia Cove Nerd Font - Nerd Fonts](https://www.nerdfonts.com/)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Made by SI 100+ Staff with ♥️"
    ]
   },
   {
