--- a/Exercises/maze-game/README.ipynb
+++ b/Exercises/maze-game/README.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# SI 100+ Summer 2024 - Maze Game\n",
     "\n",
-    "> 再次提醒：请将压缩包内所有文件 **全部解压到某一文件夹** 中再打开\n",
+    "> 再次提醒：请将压缩包内所有文件 **全部解压到某一文件夹** 中\n",
+    ">\n",
+    "> 为了能让 Python 找到所有文件，你还需要使用 VS Code 打开这个文件夹，然后使用 VS Code 的运行功能\n",
     "\n",
     "欢迎来到迷宫游戏！这是一个从上一届 SI 100B 的 Final Project 汲取灵感而~~偷~~来的小游戏。你将操控主角走完迷宫！\n",
     "\n",
